--- a/drivers/svpwm/CMakeLists.txt
+++ b/drivers/svpwm/CMakeLists.txt
@@ -2,5 +2,5 @@
 # SPDX-License-Identifier: Apache-2.0
 
 zephyr_library()
-zephyr_library_sources_ifdef(CONFIG_SPINNER_SVPWM_STM32 svpwm_stm32.c)
-
+#zephyr_library_sources_ifdef(CONFIG_SPINNER_SVPWM_STM32 svpwm_stm32.c)
+zephyr_library_sources(svpwm_stm32.c)
