--- a/src/Kconfig
+++ b/src/Kconfig
@@ -1,8 +1,4 @@
 # Copyright (c) 2021 Teslabs Engineering S.L.
 # SPDX-License-Identifier: Apache-2.0
 
-menu "Libraries"
-rsource "svm/Kconfig"
-rsource "utils/Kconfig"
-
-endmenu
+source "Kconfig.zephyr"
