--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,4 +1,5 @@
 # Copyright (c) 2021 Teslabs Engineering S.L.
 # SPDX-License-Identifier: Apache-2.0
 
-add_subdirectory_ifdef(CONFIG_SPINNER_SVPWM svpwm)
+#add_subdirectory_ifdef(CONFIG_SPINNER_SVPWM svpwm)
+add_subdirectory(svpwm)
